@@ -13,6 +13,13 @@ libavutil:     2013-12-xx
 
 API changes, most recent first:
 
+2014-04-xx - xxxxxxx - lavu 53.13.0 - frame.h, display.h
+  Add AV_FRAME_DATA_DISPLAYMATRIX for exporting further
+  spatial rendering the video should do for proper display.
+
+2014-04-xx - xxxxxxx - lavc 55.49.0 - avcodec.h
+  Add AV_PKT_DATA_DISPLAYMATRIX for exporting the transformation matrix.
+
 2014-04-xx - xxxxxxx - lavu 53.12.0 - crc.h
   Add AV_CRC_16_ANSI_LE crc variant.
 
